--- a/app/src/main/res/layout/activity_demo.xml
+++ b/app/src/main/res/layout/activity_demo.xml
@@ -55,6 +55,13 @@
         android:orientation="horizontal">
 
         <EditText
+            android:id="@+id/country"
+            android:layout_width="100dp"
+            android:layout_height="wrap_content"
+            android:layout_marginEnd="15dp"
+            android:hint="@string/country" />
+
+        <EditText
             android:id="@+id/edit_state"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
@@ -62,7 +69,7 @@
             android:layout_marginEnd="20dp"
             android:layout_weight="1"
             android:autofillHints="name"
-            android:hint="@string/find_state"
+            android:hint="@string/state"
             android:inputType="text"
             tools:ignore="LabelFor" />
 
